# cross-sqlx-test

./: Cargo.toml  Cross.toml  README.md
src/: main.rs
